# mildmouse

./: README.md  pyproject.toml
src/mildmouse/: __init__.py
