[project]
name = "mildmouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mildmouse = "mildmouse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
